# awschains

./: .gitignore  .gitmodules  README.ja.md  README.md  awschains.py  conditions.py  new_awschains.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  wrapper.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: develop.yml  guard_branch.sh  main.yml  pre-release.yml  release.yml  test.yml
src/awschains/: dynamochain.py
test/: conftest.py  data.py  test_awschains.py  test_wrapper.py
test/data/: expected_delete.json  expected_put3.json  expected_query2.json  expected_scan1.json  expected_scan2.json
test/database/: database.json
tests/: conftest.py  data.py  test_dynamochain.py  test_wrapper.py
tests/data/: expected_get.json  expected_put1-2.json  expected_put1.json  expected_put2.json  expected_put3-4.json  expected_query1.json  expected_query2.json
