[build-system]
requires = ["setuptools>=46", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "awschains"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.9",
]
requires-python = "==3.9.*"
dependencies = [
    "boto3~=1.26"
]
dynamic = ["version"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "awschains._version.version"}

[tool.setuptools_scm]
write_to = "src/awschains/_version.py"
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "mypy",
    "black",
    "isort"
]
